[workspace]
members = ["archer-http", "archer-proto", "tracing-archer"]

[workspace.package]
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[package]
name = "archer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
archer-http = { path = "archer-http" }
archer-proto = { path = "archer-proto" }
base64 = "0.21.5"
bimap = "0.6.3"
bytes = "1.5.0"
futures-util = { version = "0.3.29", features = ["sink"] }
hex = "0.4.3"
itoa = "1.0.9"
mime = "0.3.17"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
quinn = { version = "0.10.2", default-features = false, features = ["runtime-tokio", "tls-rustls"] }
rand = "0.8.5"
rcgen = "0.11.3"
rusqlite = { version = "0.30.0", features = ["array", "bundled", "time", "trace"] }
rustls = "0.21.9"
rustls-pemfile = "1.0.4"
ryu = "1.0.15"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
snap = "1.1.0"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde"] }
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-shutdown = "0.1.4"
tokio-util = { version = "0.7.10", features = ["codec", "net"] }
tracing = "0.1.40"
tracing-archer = { path = "./tracing-archer" }
tracing-subscriber = "0.3.18"
unidirs = "0.1.1"

[dev-dependencies]
serde_urlencoded = "0.7.1"

[build-dependencies]
mime_guess = "2.0.4"
quote = { version = "1.0.33", default-features = false }
regex = "1.10.2"
siphasher = "1.0.0"
walkdir = "2.4.0"

[profile.release]
lto = true
strip = true
