[workspace]
members = ["archer-http", "archer-proto", "tracing-archer"]

[workspace.package]
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"
rand = "0.8.5"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.199", features = ["derive"] }
snap = "1.1.1"
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dependencies.quinn]
git = "https://github.com/quinn-rs/quinn.git"
version = "0.11.0"
default-features = false
features = ["runtime-tokio", "rustls"]

[workspace.dependencies.rustls]
version = "0.23.5"
default-features = false
features = ["logging", "ring", "std", "tls12"]

[package]
name = "archer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
archer-http = { path = "archer-http" }
archer-proto = { path = "archer-proto" }
base64 = "0.22.0"
bimap = "0.6.3"
bytes = "1.6.0"
futures-util = { version = "0.3.30", features = ["sink"] }
hex = "0.4.3"
itoa = "1.0.11"
mime = "0.3.17"
once_cell.workspace = true
phf = { version = "0.11.2", features = ["macros"] }
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
quinn.workspace = true
rand.workspace = true
rcgen = "0.13.1"
rusqlite = { version = "0.31.0", features = ["array", "bundled", "time", "trace"] }
rustls.workspace = true
rustls-pemfile.workspace = true
ryu = "1.0.17"
serde.workspace = true
serde_json = "1.0.116"
snap.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tokio-shutdown = "0.1.4"
tokio-util = { version = "0.7.10", features = ["codec", "net"] }
tracing.workspace = true
tracing-archer = { path = "./tracing-archer" }
tracing-subscriber.workspace = true
unidirs = "0.1.1"

[dev-dependencies]
serde_urlencoded = "0.7.1"

[build-dependencies]
mime_guess = "2.0.4"
quote = { version = "1.0.36", default-features = false }
regex = "1.10.4"
siphasher = "1.0.1"
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true
