[package]
name = "archer-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers", "http2"] }
num-traits = { version = "0.2.17", features = ["i128"] }
ordered-float = "4.1.1"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["compression-gzip", "decompression-gzip", "trace", "util"] }
