[package]
name = "archer-http"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum = { version = "0.7.9", features = ["http2"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
num-traits = { version = "0.2.19", features = ["i128"] }
ordered-float = "4.5.0"
serde.workspace = true
thiserror.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-gzip", "decompression-gzip", "trace", "util"] }
