[package]
name = "archer-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
prost = "0.12.4"
prost-types = "0.12.4"
tonic = { version = "0.10.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.10.2"
