[package]
name = "archer-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
tonic = { version = "0.12.3", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.12.3"
