[package]
name = "tracing-archer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
once_cell = "1.19.0"
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
quanta = "0.12.3"
rand = "0.8.5"
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.199", features = ["derive", "rc"] }
snap = "1.1.1"
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["net", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webpki = { version = "0.22.4", features = ["std"] }

[dependencies.quinn]
git = "https://github.com/quinn-rs/quinn.git"
version = "0.11.0"
default-features = false
features = ["runtime-tokio", "rustls"]

[dev-dependencies]
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
