[package]
name = "tracing-archer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
once_cell.workspace = true
postcard = { version = "1.0.8", default-features = false, features = ["use-std"] }
quanta = "0.12.3"
quinn = { workspace = true, features = ["ring"] }
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde = { workspace = true, features = ["rc"] }
snap.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["net", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
webpki = { version = "0.22.4", features = ["std"] }

[dev-dependencies]
anyhow = "1.0.86"
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "time"] }
