[package]
name = "tracing-quiver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell = "1.15.0"
quanta = "0.10.1"
quinn = { version = "0.8.5", default-features = false, features = ["ring", "tls-rustls"] }
rand = "0.8.5"
rmp-serde = "1.1.1"
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.145", features = ["derive", "rc"] }
snap = "1.0.5"
thiserror = "1.0.37"
time = { version = "0.3.14", features = ["serde"] }
tokio = { version = "1.21.2", features = ["sync", "time"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
webpki = "0.22.0"

[dev-dependencies]
anyhow = "1.0.65"
tokio = { version = "1.21.2", features = ["fs", "macros", "rt-multi-thread", "time"] }
